ну это уже финальный вариант лейбла

--- a/frontend/html/common/menu-full.html
+++ b/frontend/html/common/menu-full.html
@@ -2,7 +2,7 @@
 <nav class="menu menu-full">
     <div class="menu-left">
         <a href="{% url "index" %}" class="menu-logo">
-            Вышка.Клуб <img src="{% static "images/logo/logo-128.png" %}" alt=" x " width="26" height="26">
+            <img src="{% static "images/logo/logo-128.png" %}" alt=" x " width="26" height="26"> Вышка.Клуб
         </a>
     </div>
     <div class="menu-center">
