--- a/frontend/html/sidebar_layout.html
+++ b/frontend/html/sidebar_layout.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="feed-sidebar-block">
-            <div class="feed-sidebar-header">Комнаты</div>
+            <div class="feed-sidebar-header">Коворкинг</div>
             <div class="feed-sidebar-topics">
                 {% for topic in topics %}
                     {% include "posts/widgets/topic.html" with topic=topic type="card" %}
