--- a/frontend/html/auth/login.html
+++ b/frontend/html/auth/login.html
@@ -4,10 +4,10 @@
     <div class="login">
         <div class="login-services">
             <div class="block login-service">
-                <div class="login-service-title">Вход по почте или нику</div>
+                <div class="login-service-title">Для входа введи свою почту вышки, или ник</div>
                 <div class="login-service-form">
                     <form action="{% url "email_login" %}" method="post">
-                        <input type="text" name="email_or_login" value="{{ email|default:"" }}" placeholder="your@gmail.com" class="login-email" required>
+                        <input type="text" name="email_or_login" value="{{ email|default:"" }}" placeholder="name@edu.hse.ru" class="login-email" required>
                         {% if goto %}<input type="hidden" name="goto" value="{{ goto }}">{% endif %}
                         <button type="submit" class="button login-button" style="min-width: 200px;">🤙 Войти</button>
                     </form>
@@ -16,7 +16,7 @@
 
             {% if features.PATREON_AUTH_ENABLED %}
                 <div class="block login-service" style="max-width: 300px;">
-                    <div class="login-service-title">Патреон</div>
+                    <div class="login-service-title">Поддержи клуб</div>
                     <div class="login-service-description">
                         Специальный вход тех, кто патронит <a href="https://patreon.com/vas3k">vas3k</a> и олдов.
                     </div>
