Donation blocks removed
Закомментировал строки, связанные с донатами

--- a/frontend/html/auth/join.html
+++ b/frontend/html/auth/join.html
@@ -14,9 +14,9 @@
 
         <form action="{% url "pay" %}" method="get">
 
-        <div class="join-subtitle" id="select_package">Админы Клуба оплачивают сервера за свои средства, но вы можете нас пронспонсировать ☺ так клуб продолжит сохранять свою независимость</div>
+        <!--<div class="join-subtitle" id="select_package">Админы Клуба оплачивают сервера за свои средства, но вы можете нас пронспонсировать ☺ так клуб продолжит сохранять свою независимость</div> -->
 
-        {% include "payments/blocks/packages.html" %}
+        <!-- {% include "payments/blocks/packages.html" %} -->
 
         <div class="join-subtitle">Ваш e-mail с доменом hse.ru</div>
 
