--- a/frontend/html/auth/login.html
+++ b/frontend/html/auth/login.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
 
-            {% if features.PATREON_AUTH_ENABLED %}
+            <!--{% if features.PATREON_AUTH_ENABLED %}
                 <div class="block login-service" style="max-width: 300px;">
                     <div class="login-service-title">Поддержи клуб</div>
                     <div class="login-service-description">
@@ -24,7 +24,7 @@
                         <a href="{% url "patreon_login" %}{% if goto %}?goto={{ goto|urlencode }}{% endif %}" class="button login-button login-button-patreon"><i class="fab fa-patreon"></i> Войти</a>
                     </div>
                 </div>
-            {% endif %}
+            {% endif %}-->
         </div>
 
         <div class="login-separator">🤔 Всё еще нет клубной карты?</div>
