--- a/frontend/html/auth/join.html
+++ b/frontend/html/auth/join.html
@@ -12,7 +12,7 @@
             Если вам не подходят наши <a href="{% url "docs" "about" %}" target="_blank">правила</a>, вы боитесь деанона или прилетели «просто почитать посты» рекомендуем сэкономить нам всем время и пойти на <a href="https://vk.ru/" rel="nofollow">ВКонтач</a>, там тоже есть немало Вышкинских сообществ.
         </div>
 
-        <form action="{% url "pay" %}" method="get">
+        <form action="{% url "login" %}" method="get">
 
         <!--<div class="join-subtitle" id="select_package">Админы Клуба оплачивают сервера за свои средства, но вы можете нас пронспонсировать ☺ так клуб продолжит сохранять свою независимость</div> -->
 
