--- a/frontend/html/auth/login.html
+++ b/frontend/html/auth/login.html
@@ -7,24 +7,13 @@
                 <div class="login-service-title">Для входа введи свою почту вышки, или ник</div>
                 <div class="login-service-form">
                     <form action="{% url "email_login" %}" method="post">
-                        <input type="text" name="email_or_login" value="{{ email|default:"" }}" placeholder="name@edu.hse.ru" class="login-email" required>
+                        <input type="text" name="email_or_login" value="{{ email|default:"" }}" placeholder="name@anything.hse.ru" class="login-email" required>
                         {% if goto %}<input type="hidden" name="goto" value="{{ goto }}">{% endif %}
                         <button type="submit" class="button login-button" style="min-width: 200px;">🤙 Войти</button>
                     </form>
                 </div>
             </div>
 
-            <!--{% if features.PATREON_AUTH_ENABLED %}
-                <div class="block login-service" style="max-width: 300px;">
-                    <div class="login-service-title">Поддержи клуб</div>
-                    <div class="login-service-description">
-                        Специальный вход тех, кто патронит <a href="https://patreon.com/vas3k">vas3k</a> и олдов.
-                    </div>
-                    <div class="login-service-form">
-                        <a href="{% url "patreon_login" %}{% if goto %}?goto={{ goto|urlencode }}{% endif %}" class="button login-button login-button-patreon"><i class="fab fa-patreon"></i> Войти</a>
-                    </div>
-                </div>
-            {% endif %}-->
         </div>
 
         <div class="login-separator">🤔 Всё еще нет клубной карты?</div>
