--- a/frontend/html/auth/login.html
+++ b/frontend/html/auth/login.html
@@ -7,7 +7,7 @@
                 <div class="login-service-title">Для входа введи свою почту вышки, или ник</div>
                 <div class="login-service-form">
                     <form action="{% url "email_login" %}" method="post">
-                        <input type="text" name="email_or_login" value="{{ email|default:"" }}" placeholder="name@anything.hse.ru" class="login-email" required>
+                        <input type="email" name="email_or_login" value="{{ email|default:"" }}" placeholder="name@anything.hse.ru" class="login-email" required>
                         {% if goto %}<input type="hidden" name="goto" value="{{ goto }}">{% endif %}
                         <button type="submit" class="button login-button" style="min-width: 200px;">🤙 Войти</button>
                     </form>
