--- a/frontend/html/layout.html
+++ b/frontend/html/layout.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="ru">
 <head>
-    <title>{% block title %} Хайер 🐦 Клаб{% endblock %}</title>
+    <title>{% block title %}Вышка 🐦Клуб{% endblock %}</title>
     {% block fonts %}
         {% include "common/fonts.html" %}
     {% endblock %}
